# Authentik-Solana

./: .eslintrc.js  .gitignore  .prettierrc.js  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: continous_integration.yml
authentik-src/: package-lock.json  package.json
authentikGoodSoFar/authentik-src/: package-lock.json  package.json
authentikGoodSoFar/authentik-src/src/program-rust/: Cargo.toml
authentikGoodSoFar/authentik-src/src/program-rust/src/: lib.rs
authentikGoodSoFar/authentik-src/src/program-rust/tests/: lib.rs
helloworld/: package-lock.json
src/scripts/: connect.ts  createAccount.ts  mintNFT.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-83901-8UKBfy1R6wnQf9KmrRCUVPrJxX5GV5Nz7C2Ku84XLJFb.tar  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/: 73025.112767  77903.111591  77904.111590  77905.111589  77906.111588  77907.111587  77908.111586  77909.111585  77910.111584  77911.111596  77912.111595  77913.111600  77914.111599  77915.111604  77916.111603  77917.111606  77918.111610  77919.111609  77920.111614  77921.111613  77922.111618  77923.111617  77924.111620  77925.111624  77926.111623  77927.111628  77928.111627  77929.111630  77930.111634  77931.111633  77932.111638  77933.111637  77934.111642  77935.111641  77936.111646  77937.111645  77938.111648  77939.111652  77940.111651  77941.111656  (+184 more)
test-ledger/rocksdb/: 007800.sst  007803.sst  007805.sst  007816.sst  007823.sst  007827.sst  007830.sst  007833.sst  007836.sst  007838.sst  007841.sst  007843.sst  IDENTITY  LOG  (+2 more)
(+80 files in other folders)
