
[package]
name = "authentik-demo"
version = "0.0.1"
description = "Simple rust program to set uri in struct"
authors = ["Sam Orend"]
repository = "https://github.com/samwise2/Authentik-Solana"
license = "Apache-2.0"
homepage = "https://samorend.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "authentik"
crate-type = ["cdylib", "lib"]
